# CanadaImmigrationHelpdesk_UsingGenAI

./: README.md  pyproject.toml
data/: crawled_page_links.txt
data/docs/: immigration-refugees-citizenship_corporate_mandate.txt  immigration-refugees-citizenship_corporate_publications-manuals_operational-bulletins-manuals_standard-requirements_language-requirements_designated-testing-agencies.txt  immigration-refugees-citizenship_corporate_publications-manuals_quarterly-financial-report-quarter-ended-december-31-2014.txt  immigration-refugees-citizenship_services_immigrate-canada_agri-food-pilot_work-permit.txt  immigration-refugees-citizenship_services_immigrate-canada_express-entry.txt  immigration-refugees-citizenship_services_immigrate-canada_rural-northern-immigration-pilot_recommendation.txt  immigration-refugees-citizenship_services_new-immigrants_prepare-life-canada_border-entry_bringing-goods.txt  immigration-refugees-citizenship_services_settle-canada_driving.txt  immigration-refugees-citizenship_services_settle-canada_housing_renting.txt  immigration-refugees-citizenship_services_settle-canada_laws.txt  (+1 more)
notebooks/: AgentTools_and_Routers.ipynb  ApplicationFeesCalculator.ipynb  LangChainVsLangraph.ipynb  PromptTemplates_AgentTools_Routers.ipynb  PromptTemplates_and_AgentTools.ipynb  RAG_help_assistant.ipynb  crawl_pagelinks.ipynb  extract_page_information.ipynb  save_and_load_faiss_index.ipynb
src/: build_RAG_index.py  crawl_pagelinks.py  extract_data.py  query.py
